fixing main wrap

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ img {
 
     .outer-section {
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
 }
